Criando class para homefilmes

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,18 +13,17 @@
         </div>
         <div class="mr-2">
             <a href="#">
-                <button class="bg-slate-700 text-white py-1 px-3 rounded-md">
+                <button class="bg-red-600 text-white py-1 px-3 rounded-md">
                     login
                 </button>
             </a>
         </div>
         <div class="mr-2">
             <a href="#">
-                <button class="bg-slate-700 text-white py-1 px-3 rounded-md">
+                <button class="bg-red-600 text-white py-1 px-3 rounded-md">
                     Editar perfil
                 </button>
             </a>
         </div>
     </div>
-
 </nav>
