Criando class para direcionar filmes

--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -7,7 +7,7 @@
 {% block content%}
 <div class='py-25'>
    <h1>Essa é a Home Filmes</h1>
-   {% for filme in lista_filmes %}
+   {% for filme in object_list %}
    <hr>
    <p>{{filme}}</p>
    <p>{{ file.descricao }}</p>
