--- a/filme/templates/detalhesfilmes.html
+++ b/filme/templates/detalhesfilmes.html
@@ -8,4 +8,12 @@
    <p>{{object}}</p>
  <p>{{ object.descricao}}</p>
  <img src= "{{ object.thumb.url }}">
+
+   <h2>Episódios</h2>
+   {% for episodio in object.episodios.all %}
+   <a href="{{ episodio.video }}">
+      <p>Episódio {{ forloop.counter }}: {{ episodio.titulo }}</p>
+   </a>   
+   {% endfor %}
+</div>   
 {% endblock %}
