--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -14,4 +14,12 @@
    <img src="{{ filme.thumb.url }}">
    {% endfor %}
 </div>
+<div class='py-10'>
+   <h2>Novo</h2>
+   {{ lista_filmes_recentes }}
+</div>
+<div class='py-10'>
+   <h2>Filmes em alta</h2>
+   {{ lista_filmes_emalta }}
+</div>
 {% endblock %}    
