--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -1,25 +1,72 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block titulo%}
    Home Filmes Dragon Ball
 {% endblock%}
 
 {% block content%}
-<div class='py-25'>
-   <h1>Essa é a Home Filmes</h1>
-   {% for filme in object_list %}
-   <hr>
-   <a href="{% url 'filme:detalhesfilmes' filme.pk %}"><p>{{ filme.titulo }}</p></a>
-   <p>{{ filme.descricao }}</p>
-   <img src="{{ filme.thumb.url }}">
-   {% endfor %}
-</div>
-<div class='py-10'>
-   <h2>Novo</h2>
-   {{ lista_filmes_recentes }}
-</div>
-<div class='py-10'>
-   <h2>Filmes em alta</h2>
-   {{ lista_filmes_emalta }}
-</div>
-{% endblock %}    
+<main class='bg-primary_black min-h-screen w-full'>
+   <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{{ filme_destaque.thumb.url }}');">
+       <div>
+           <h2 class="text-6xl font-semibold text-white my-4">
+               {{ filme_destaque.titulo}}
+           </h2>
+           <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
+               {{ filme_destaque.descricao}}
+           </p>
+           <div class="flex my-4">
+               <a href="{% url 'filme:detalhesfilmes' filme_destaque.pk %">
+                   <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
+                       <ion-icon name="play" class="text-2xl"></ion-icon>
+                       <span class="ml-3 font-medium " >
+                           Play
+                       </span>
+                   </button>
+               </a>
+           </div>
+       </div>
+   </section> 
+
+
+   <section class='bg-primary_black flex justify-center py-10'>
+       <div class="p-8 w-10/12 relative" >
+           <h2 class="text-gray-200 text-2xl font-medium">
+               Novo
+           </h2>
+           <div class="wrapper">
+             <section id="section1" class="flex flex-nowrap items-center justify-center space-x-8">
+               {% for filme in lista_filmes_recentes %}
+               {% if forloop.counter < 5 %}
+                 <div class="item h-64 w-1/4 m-4">
+                     <a href="{% url 'filme:detalhesfilmes' filme.pk %}">
+                       <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover">
+                     </a>
+                 </div>
+               {% endif %}
+               {% endfor %}
+           </div>
+       </div>
+   </section>
+
+   <section class='bg-primary_black flex justify-center py-10'>
+      <div class="p-8 w-10/12 relative" >
+          <h2 class="text-gray-200 text-2xl font-medium">
+              Em alta
+          </h2>
+          <div class="wrapper">
+            <section id="section1emalta" class="flex flex-nowrap items-center justify-center space-x-8">
+              {% for filme in lista_filmes_emalta %}
+              {% if forloop.counter < 5 %}
+                <div class="item h-64 w-1/4 m-4">
+                    <a href="{% url 'filme:detalhesfilmes' filme.pk %}">
+                      <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover">
+                    </a>
+                </div>
+              {% endif %}
+              {% endfor %}
+          </div>
+      </div>
+  </section>
+</main>
+{% endblock %}
