--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -68,5 +68,26 @@
           </div>
       </div>
   </section>
+ 
+    <section class='bg-primary_black flex justify-center py-10'>
+      <div class="p-8 w-10/12 relative" >
+          <h2 class="text-gray-200 text-2xl font-medium">
+              Vistos
+          </h2>
+          <div class="wrapper">
+            <section id="section1vistos" class="flex flex-nowrap items-center justify-center space-x-8">
+              {% for filme in request.user.filmes_vistos.all  %}
+              {% if forloop.counter < 5 %}
+                <div class="item h-64 w-1/4 m-4">
+                    <a href="{% url 'filme:detalhesfilmes' filme.pk %}">
+                      <img src="{{ filme.thumb.url }}" class="rounded-md w-full h-full object-cover">
+                    </a>
+                </div>
+              {% endif %}
+              {% endfor %}
+          </div>
+      </div>
+   </section>
+
 </main>
 {% endblock %}
