Finalizando a edição da pagina, homefilme

--- a/filme/templates/homefilmes.html
+++ b/filme/templates/homefilmes.html
@@ -9,15 +9,15 @@
 <main class='bg-primary_black min-h-screen w-full'>
    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{{ filme_destaque.thumb.url }}');">
        <div>
-           <h2 class="text-6xl font-semibold text-white my-4">
+           <h2 class="text-6xl font-semibold text-black my-4">
                {{ filme_destaque.titulo}}
            </h2>
-           <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
+           <p class=" w-11/12 md:w-5/12 font-medium text-black my-4">
                {{ filme_destaque.descricao}}
            </p>
            <div class="flex my-4">
-               <a href="{% url 'filme:detalhesfilmes' filme_destaque.pk %">
-                   <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
+               <a href="{% url 'filme:detalhesfilmes' filme_destaque.pk %}">
+                   <button class="flex items-center bg-red-600 py-2 px-5 rounded-md" style='color:white;'>
                        <ion-icon name="play" class="text-2xl"></ion-icon>
                        <span class="ml-3 font-medium " >
                            Play
