--- a/filme/templates/detalhesfilmes.html
+++ b/filme/templates/detalhesfilmes.html
@@ -16,7 +16,7 @@
             </p>
             <div class="flex my-4">
                 <a href="{{ object.episodios.first.video }}">
-                    <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
+                    <button class="flex items-center bg-red-600 py-2 px-5 rounded-md" style='color:white;'>
                         <ion-icon name="play" class="text-2xl"></ion-icon>
                         <span class="ml-3 font-medium">
                             Play
