--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,12 +20,14 @@
                 </button>
             </a>
         </div>
+        {% if user.is_authenticated %}
         <div class="mr-2">
-            <a href="#">
+            <a href="{% url 'filme:editarperfil' user.pk %}">
                 <button class="bg-red-600 text-white py-1 px-3 rounded-md">
                     Editar perfil
                 </button>
             </a>
+        {% endif %}
         </div>
     </div>
     {% endif %}
